# python-ci

./: .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  justfile  pyproject.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
src/mypackage/: __init__.py  __main__.py  main.py
tests/unit/: test_main.py
