[project]
name = "mypackage"
version = "0.1.0"
description = "Example package"
authors = [
  {name = "Stijn de Gooijer", email = "stijndegooijer@gmail.com"},
]
repository = "https://github.com/stinodego/python-ci"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "polars>=1.21.0",
]

[project.scripts]
mycli = 'mypackage.__main__:main'

[dependency-groups]
dev = [
  "coverage>=7.6.10",
  "mypy>=1.14.1",
  "pre-commit>=4.1.0",
  "pytest>=8.3.4",
  "pytest-mock>=3.14.0",
  "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# TODO: Set to ">=0.5,<0.6" when bug is fixed
# https://github.com/astral-sh/setup-uv/issues/264
required-version = "<0.6"

[tool.ruff]
src = ["src"]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "E",  # pycodestyle
  "W",  # pycodestyle
  "I",  # isort
  "D",  # pydocstyle
  "UP",  # pyupgrade
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "RUF",  # Ruff-specific rules
]
ignore = [
  # Line length regulated by ruff formatter
  "E501",
  # Docstrings not required
  "D1",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
files = "src"
mypy_path = "src"
strict = true
enable_error_code = [
  "redundant-expr",
  "truthy-bool",
  "ignore-without-code",
]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
