[project]
name = "mypackage"
version = "0.1.0"
description = "Example package"
authors = [
  {name = "Stijn de Gooijer", email = "stijndegooijer@gmail.com"},
]
repository = "https://github.com/stinodego/python-ci"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "polars>=1.38.1",
]

[project.scripts]
mycli = 'mypackage.__main__:main'

[dependency-groups]
dev = [
  "coverage>=7.13.4",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.10,<0.11"

[tool.ruff]
src = ["src"]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "E",  # pycodestyle
  "W",  # pycodestyle
  "I",  # isort
  "D",  # pydocstyle
  "UP",  # pyupgrade
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "RUF",  # Ruff-specific rules
]
ignore = [
  # Line length regulated by ruff formatter
  "E501",
  # Docstrings not required
  "D1",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
files = "src"
mypy_path = "src"
strict = true

[tool.pytest]
strict = true
addopts = [
  "--import-mode=importlib",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_also = [
  "if __name__ == .__main__.:",
]
